Fix Legend being too big. Import more data from json files.

--- a/src/game.scss
+++ b/src/game.scss
@@ -259,7 +259,7 @@ canvas {
   
   z-index: 200;
   top: 94px;
-  bottom: 5px;
+  /*bottom: 5px;*/
   
   
   -moz-border-radius: 15px;
